# clairvoyant-optics

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  DEV-OPS-PLAN.md  README.md  TEST_RESULTS.md  UAT.md  download_models.py  icon.icns  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  error-analyzer.yml  release.yml
assets/: fi.kaikkonen.clairvoyantd.plist  icon.icns
docker/: Dockerfile  docker-compose.yml
scripts/: build-dmg.sh  ci-smoke-test.sh  devops-loop.py  test-dmg.sh
src/: __init__.py  cli.py  config.py  main.py
src/desktop/: __init__.py  clairvoyant_web_dashboard.py  ipc_client.py  menu_bar.py  settings.py  web_dashboard.py
src/detection/: __init__.py  person_detector.py
src/integration/: __init__.py  mqtt_notifier.py
src/macos/: __init__.py  app.py  battery_optimizer.py  clairvoyant_macos_app.py  clairvoyant_macos_settings.py  error_reporter.py  menubar_app.py  notifier.py  photos_importer.py  settings.py  updater.py  web_server.py
src/recognition/: __init__.py  face_recognizer.py
src/service/: __init__.py  battery_manager.py  camera_manager.py  config_store.py  daemon.py  ipc_server.py  ml_manager.py  notification_bus.py  orchestrator.py
src/streams/: __init__.py  hls_reader.py
src/utils/: __init__.py  logging.py
tests/: test_config_integration.py  test_config_mapping.py  test_gui_integration.py  test_gui_macos_atomacos.py  test_gui_macos_combined.py  test_gui_pyautogui_vs_atomacos.py  test_web_dashboard_e2e.py
