[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clairvoyant-optics"
version = "5.6.1"
description = "Privacy-first facial recognition for macOS — your digital eye for surveillance cameras"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Petteri Kaikkonen"}]

[project.scripts]
clairvoyant = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
